<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="es.carlostessier.mispruebas.ImplicitIntents"
    >
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTextWeb"
        android:id="@+id/buttonWeb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickWebBrowser"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTextTelf"
        android:id="@+id/buttonTelf"
        android:layout_below="@id/buttonWeb"
        android:layout_centerHorizontal="true"
        android:onClick="onClickDial"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTextLoc"
        android:id="@+id/buttonLoc"
        android:layout_below="@id/buttonTelf"
        android:layout_centerHorizontal="true"
        android:onClick="onClickShowMaps"/>

</RelativeLayout>
